kubernetes/apps/networking/hyperoptic/app/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: hyperoptic
  namespace: networking
subsets:
- addresses:
  - ip: 192.168.0.1
  ports:
  - name: hyperoptic
    port: 80
    protocol: TCP
